# wgpu-rust-renderer

./: .travis.yml  Cargo.toml  README.md
examples/cube/: main.rs
examples/face_culling/: main.rs
examples/gltf/: main.rs
examples/pbr/: main.rs
examples/rotation/: main.rs
examples/texture/: main.rs
examples/triangle/: main.rs
src/: lib.rs
src/geometry/: attribute.rs  geometry.rs  index.rs  mod.rs
src/material/: material.rs  mod.rs  node.rs
src/material/node/: add.rs  brdf.rs  const_float.rs  const_vector3.rs  float.rs  linear_to_srgb.rs  mod.rs  multiply.rs  node.rs  normal.rs  normal_matrix.rs  srgb_to_linear.rs  sub.rs  tangent_to_object_normal.rs  texture.rs  texture_rgb.rs  vector3.rs  x.rs  xyz.rs  y.rs  z.rs
src/math/: color.rs  euler.rs  matrix3.rs  matrix3gpu.rs  matrix4.rs  mod.rs  quaternion.rs  vector3.rs
src/renderer/: mod.rs  shader.wgsl  wgpu_attributes.rs  wgpu_bindings.rs  wgpu_indices.rs  wgpu_render_pipeline.rs  wgpu_renderer.rs  wgpu_samplers.rs  wgpu_textures.rs
src/resource/: mod.rs  resource.rs
src/scene/: camera.rs  geometry.rs  mesh.rs  mod.rs  node.rs  object.rs  scene.rs  texture.rs
src/texture/: mod.rs  sampler.rs  texture.rs
src/utils/: file_loader.rs  geometry_helper.rs  gltf_loader.rs  log.rs  material_helper.rs  mod.rs  texture_loader.rs
src/web/: mod.rs  wgpu_web_renderer.rs
web/: build_examples.sh
web/examples/: build.sh  index.css  index.html
web/examples/cube/: Cargo.toml  build.sh  index.html  wgpu_rust_renderer_example_cube.js  wgpu_rust_renderer_example_cube_bg.wasm
web/examples/cube/src/: lib.rs
web/examples/face_culling/: Cargo.toml  build.sh  index.html  wgpu_rust_renderer_example_face_culling.js  wgpu_rust_renderer_example_face_culling_bg.wasm
web/examples/face_culling/src/: lib.rs
web/examples/gltf/: Cargo.toml  build.sh  index.html  wgpu_rust_renderer_example_gltf.js  wgpu_rust_renderer_example_gltf_bg.wasm
web/examples/gltf/src/: lib.rs
web/examples/rotation/: Cargo.toml  build.sh  index.html  wgpu_rust_renderer_example_rotation.js  wgpu_rust_renderer_example_rotation_bg.wasm
web/examples/rotation/src/: lib.rs  shader.wgsl
web/examples/texture/: Cargo.toml  build.sh  index.html  wgpu_rust_renderer_example_texture.js  wgpu_rust_renderer_example_texture_bg.wasm
web/examples/texture/src/: lib.rs
web/examples/triangle/: Cargo.toml  build.sh  index.html  wgpu_rust_renderer_example_triangle.js  wgpu_rust_renderer_example_triangle_bg.wasm
web/examples/triangle/src/: lib.rs
web/examples/utils/: fetch.rs  window.rs
