[package]
name = "wgpu_rust_renderer"
version = "0.0.0"
description = "Tiny WebGPU Renderer in Rust"
authors = ["Takahiro <hogehoge@gachapin.jp>"]
edition = "2018"
license = "MIT"
resolver = "2"
homepage = "https://github.com/takahirox/wgpu-rust-renderer"
repository = "https://github.com/takahirox/wgpu-rust-renderer"
exclude = [
  "screenshots/*",
  "web/*"
]

[dependencies]
png = "0.17.1"
winit = "0.25.0"
wgpu = "0.11.0"

[dependencies.bytemuck]
version = "1.7.2"
features = ["derive"]

[dependencies.web-sys]
version = "0.3.55"
features = [
  "CssStyleDeclaration",
  "HtmlCanvasElement",
]

[dev-dependencies]
tokio = {version = "1.12.0", features = ["full"]}

[badges]
travis-ci = {repository = "takahirox/wgpu-rust-renderer"}
