[package]
name = "wgpu_rust_renderer"
version = "0.0.3"
description = "Tiny WebGPU Renderer in Rust"
authors = ["Takahiro <hogehoge@gachapin.jp>"]
edition = "2018"
license = "MIT"
resolver = "2"
homepage = "https://github.com/takahirox/wgpu-rust-renderer"
repository = "https://github.com/takahirox/wgpu-rust-renderer"
exclude = [
  "screenshots/*",
  "web/*"
]

[dependencies]
bytemuck = {version = "1.7.2", features = ["derive"]}
futures = "0.3.17"
gltf = "0.16.0"
png = "0.17.1"
wgpu = "0.11.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jpeg-decoder = "0.1.22"
winit = "0.25.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
jpeg-decoder = {version = "0.1.22", default-features = false}
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
winit = {version = "0.25.0", features = ["web-sys"]}

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.55"
features = [
  "CssStyleDeclaration",
  "HtmlCanvasElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = {version = "1.12.0", features = ["full"]}

[badges]
travis-ci = {repository = "takahirox/wgpu-rust-renderer"}
