[package]
name = "wgpu_rust_renderer_example_cube"
version = "0.1.0"
authors = ["Takahiro <hogehoge@gachapin.jp>"]
edition = "2018"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
web-sys = "0.3.55"
wgpu_rust_renderer = {path = "../../../"}

[dependencies.winit]
version = "0.25"
features = ["web-sys"]
